# Prescription-Management-System

./: .gitignore  README.md  preview.md  run.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2116fac0f69f_create_users_and_email_verification_.py  285d92325f21_add_subscriptions.py  6a18e0dd9995_add_doctor_profile_template_and_.py  81fb658eacdc_add_doctor_profiles.py  bf4bd560bd8c_add_access_tokens_and_password_reset_.py  dd657881683e_replace_email_verification_tokens_with_.py  f94e75ff5aae_add_patients_and_prescriptions.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  cookies.py  database.py  plans.py  security.py
backend/app/models/: __init__.py  access_token.py  doctor_profile.py  otp.py  password_reset_otp.py  patient.py  prescription.py  prescription_medicine.py  subscription.py  tokens.py  user.py
backend/app/repositories/: access_token_repository.py  doctor_profile_repository.py  otp_repository.py  password_reset_repository.py  patient_repository.py  prescription_repository.py  subscription_repository.py  token_repository.py  user_repository.py
backend/app/schemas/: admin.py  auth.py  doctor_profile.py  (+4 more)
backend/scripts/: create_admin.py  db_clean.py
backend/tests/: conftest.py  test_admin.py  test_auth_login.py  test_auth_logout.py  test_auth_me.py  test_auth_password_reset.py  test_auth_register.py  test_auth_verify.py  test_billing_webhook.py  test_doctor_profile.py  test_patients.py  test_prescriptions.py  test_subscriptions.py
(+73 files in other folders)
